chore: fine tune nginx config

--- a/data/nginx/default.conf
+++ b/data/nginx/default.conf
@@ -13,8 +13,8 @@ map $sent_http_content_type $expires {
 server {
     listen 80;
 
-    server_name     localhost gittrends.app;
-    server_name     www.localhost www.gittrends.app;
+    server_name     gittrends.app;
+    server_name     www.gittrends.app;
 
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
@@ -34,7 +34,7 @@ server {
     ssl_certificate_key /etc/letsencrypt/live/gittrends.app/privkey.pem;
 
     gzip            on;
-    gzip_types      text/plain application/xml text/css application/javascript;
+    gzip_types      text/plain application/xml text/css application/javascript application/json;
     gzip_min_length 1000;
 
     charset utf-8;
@@ -66,7 +66,6 @@ server {
         add_header Content-Security-Policy "default-src 'self' 'unsafe-inline' https:;";
         add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
         add_header X-Frame-Options "SAMEORIGIN";
-        add_header X-Cache-Status $upstream_cache_status;
 
         proxy_redirect                      off;
         proxy_set_header Host               $host;
