--- a/data/nginx/development.conf
+++ b/data/nginx/development.conf
@@ -12,13 +12,15 @@ server {
     server_name     localhost;
 
     gzip            on;
-    gzip_types      text/plain application/xml text/css application/javascript;
+    gzip_types      text/plain application/xml text/css application/javascript application/json;
     gzip_min_length 1000;
 
     charset utf-8;
 
     location /api {
         expires $expires;
+        add_header X-Cache-Status $upstream_cache_status;
+
         proxy_redirect                      off;
         proxy_set_header Host               $host;
         proxy_set_header X-Real-IP          $remote_addr;
