--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3.7'
 services:
   postgres:
     image: postgres:alpine
+    container_name: postgres
     restart: always
     command: -N 500
     ports:
@@ -18,6 +19,7 @@ services:
 
   pgadmin:
     image: dpage/pgadmin4:latest
+    container_name: pgadmin
     restart: always
     ports:
       - ${GITTRENDS_PGADMIN_PORT}:80
@@ -31,6 +33,7 @@ services:
 
   pgbackups:
     image: prodrigestivill/postgres-backup-local
+    container_name: pgbackups
     restart: always
     volumes:
       - /backups:/backups
@@ -51,6 +54,7 @@ services:
 
   redis:
     image: redis:alpine
+    container_name: redis
     restart: always
     ports:
       - ${GITTRENDS_REDIS_PORT}:6379
@@ -62,7 +66,10 @@ services:
     build:
       context: .
       dockerfile: ./packages/website-api/Dockerfile
+    container_name: website-api
     restart: always
+    depends_on:
+      - postgres
     environment:
       GITTRENDS_DATABASE_HOST: postgres
     env_file:
@@ -76,6 +83,7 @@ services:
       dockerfile: ./packages/website/Dockerfile
       args:
         GITHUB_CLIENT_ID: ${GITHUB_CLIENT_ID}
+    container_name: website-server
     restart: always
     depends_on:
       - website-api
@@ -87,6 +95,7 @@ services:
 
   nginx:
     image: nginx:alpine
+    container_name: nginx
     restart: always
     command: '/bin/sh -c ''while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g "daemon off;"'''
     volumes:
