fix: enable auto-restart

--- a/docker-compose.tunel.yml
+++ b/docker-compose.tunel.yml
@@ -4,6 +4,7 @@ services:
   postgres:
     image: cagataygurturk/docker-ssh-tunnel:0.0.1
     container_name: postgres
+    restart: always
     volumes:
       - $HOME/.ssh:/root/ssh:ro
     ports:
