feat: add a docker container to use as a ssh tunnel

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,8 @@ GITTRENDS_DATABASE_USERNAME=postgres
 GITTRENDS_DATABASE_PASSWORD=postgres
 GITTRENDS_DATABASE_POOL_MIN=2
 GITTRENDS_DATABASE_POOL_MAX=10
+# gittrends database over ssh tunel
+GITTRENDS_DATABASE_TUNEL_HOST=
 
 # redis - caching and messaging queue
 GITTRENDS_REDIS_HOST=localhost
