fix: map https port on nginx server and minor changes on config files

--- a/data/nginx/default.conf
+++ b/data/nginx/default.conf
@@ -12,9 +12,9 @@ map $sent_http_content_type $expires {
 
 server {
     listen 80;
+    listen [::]:80;
 
-    server_name     gittrends.app;
-    server_name     www.gittrends.app;
+    server_name     gittrends.app www.gittrends.app;
 
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
@@ -26,9 +26,10 @@ server {
 }
 
 server {
-    listen          443 ssl;
-    server_name     gittrends.app;
-    server_name     www.gittrends.app;
+    listen 443 ssl http2 default_server;
+    listen [::]:443 ssl http2 default_server;
+
+    server_name     gittrends.app www.gittrends.app;
 
     ssl_certificate /etc/letsencrypt/live/gittrends.app/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/gittrends.app/privkey.pem;
