--- a/data/nginx/development.conf
+++ b/data/nginx/development.conf
@@ -8,8 +8,10 @@ map $sent_http_content_type $expires {
 }
 
 server {
-    listen          80;
-    server_name     localhost;
+    listen 80;
+    listen [::]:80;
+
+    server_name     localhost www.localhost;
 
     gzip            on;
     gzip_types      text/plain application/xml text/css application/javascript application/json;
