chore: cache tunning

--- a/data/nginx/development.conf
+++ b/data/nginx/development.conf
@@ -1,11 +1,5 @@
-proxy_cache_path  /nuxt-cache levels=1:2 keys_zone=nuxt-cache:25m max_size=500m inactive=60m use_temp_path=off;
-proxy_cache_path  /api-cache levels=1:2 keys_zone=api-cache:25m max_size=1g inactive=60m use_temp_path=off;
-
-map $sent_http_content_type $expires {
-    "text/html"                 1h;
-    "text/html; charset=utf-8"  1h;
-    default                     7d;
-}
+proxy_cache_path  /nuxt-cache levels=1:2 keys_zone=nuxt-cache:25m max_size=500m inactive=1h use_temp_path=off;
+proxy_cache_path  /api-cache levels=1:2 keys_zone=api-cache:25m max_size=1g inactive=1h use_temp_path=off;
 
 server {
     listen 80;
@@ -20,7 +14,7 @@ server {
     charset utf-8;
 
     location /api {
-        expires $expires;
+        expires 1h;
         add_header X-Cache-Status $upstream_cache_status;
 
         proxy_redirect                      off;
@@ -36,7 +30,7 @@ server {
         proxy_pass                  http://website-api:80;
         proxy_cache                 api-cache;
         proxy_cache_bypass          $arg_nocache;
-        proxy_cache_valid           200 302  60m;
+        proxy_cache_valid           200 302  1h;
         proxy_cache_valid           404      1m;
         proxy_cache_lock            on;
         proxy_cache_use_stale error timeout http_500 http_502 http_503 http_504;
@@ -44,7 +38,7 @@ server {
     }
 
     location / {
-        expires $expires;
+        expires 1h;
         add_header Content-Security-Policy "default-src 'self' 'unsafe-inline' https:;";
         add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
         add_header X-Frame-Options "SAMEORIGIN";
@@ -62,7 +56,7 @@ server {
         proxy_pass                  http://website-server:80;
         proxy_cache                 nuxt-cache;
         proxy_cache_bypass          $arg_nocache;
-        proxy_cache_valid           200 302  60m;
+        proxy_cache_valid           200 302  1h;
         proxy_cache_valid           404      1m;
         proxy_cache_lock            on;
         proxy_cache_use_stale error timeout http_500 http_502 http_503 http_504;
