--- a/data/nginx/default.conf
+++ b/data/nginx/default.conf
@@ -1,14 +1,9 @@
 include /etc/letsencrypt/options-ssl-nginx.conf;
 ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
-proxy_cache_path  /nuxt-cache levels=1:2 keys_zone=nuxt-cache:25m max_size=500m inactive=60m use_temp_path=off;
-proxy_cache_path  /api-cache levels=1:2 keys_zone=api-cache:25m max_size=1g inactive=60m use_temp_path=off;
+proxy_cache_path  /nuxt-cache levels=1:2 keys_zone=nuxt-cache:25m max_size=250m inactive=60m use_temp_path=off;
+proxy_cache_path  /api-cache levels=1:2 keys_zone=api-cache:25m max_size=5g inactive=30d use_temp_path=off;
 
-map $sent_http_content_type $expires {
-    "text/html"                 1h;
-    "text/html; charset=utf-8"  1h;
-    default                     7d;
-}
 
 server {
     listen 80;
@@ -41,7 +36,7 @@ server {
     charset utf-8;
 
     location /api {
-        expires $expires;
+        expires 6h;
         proxy_redirect                      off;
         proxy_set_header Host               $host;
         proxy_set_header X-Real-IP          $remote_addr;
@@ -55,7 +50,7 @@ server {
         proxy_pass                  http://website-api:80;
         proxy_cache                 api-cache;
         proxy_cache_bypass          $arg_nocache;
-        proxy_cache_valid           200 302  60m;
+        proxy_cache_valid           200 302  7d;
         proxy_cache_valid           404      1m;
         proxy_cache_lock            on;
         proxy_cache_use_stale error timeout http_500 http_502 http_503 http_504;
@@ -63,7 +58,7 @@ server {
     }
 
     location / {
-        expires $expires;
+        expires 1h;
         add_header Content-Security-Policy "default-src 'self' 'unsafe-inline' https:;";
         add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
         add_header X-Frame-Options "SAMEORIGIN";
