feat: major update to create a docker container with all needed

--- a/data/nginx/default.conf
+++ b/data/nginx/default.conf
@@ -1,5 +1,5 @@
-include /etc/letsencrypt/options-ssl-nginx.conf;
-ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+include /app/data/certbot/conf/options-ssl-nginx.conf;
+ssl_dhparam /app/data/certbot/conf/ssl-dhparams.pem;
 
 proxy_cache_path  /nuxt-cache levels=1:2 keys_zone=nuxt-cache:25m max_size=250m inactive=60m use_temp_path=off;
 proxy_cache_path  /api-cache levels=1:2 keys_zone=api-cache:25m max_size=5g inactive=30d use_temp_path=off;
@@ -12,7 +12,7 @@ server {
     server_name     gittrends.app www.gittrends.app;
 
     location /.well-known/acme-challenge/ {
-        root /var/www/certbot;
+        root /app/data/certbot/www;
     }
 
     location / {
@@ -26,8 +26,8 @@ server {
 
     server_name     gittrends.app www.gittrends.app;
 
-    ssl_certificate /etc/letsencrypt/live/gittrends.app/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/gittrends.app/privkey.pem;
+    ssl_certificate /app/data/certbot/conf/live/gittrends.app/fullchain.pem;
+    ssl_certificate_key /app/data/certbot/conf/live/gittrends.app/privkey.pem;
 
     gzip            on;
     gzip_types      text/plain application/xml text/css application/javascript application/json;
@@ -47,7 +47,7 @@ server {
         proxy_read_timeout          1m;
         proxy_connect_timeout       1m;
         rewrite /api/(.*) /$1  break;
-        proxy_pass                  http://website-api:80;
+        proxy_pass                  http://localhost:8888;
         proxy_cache                 api-cache;
         proxy_cache_bypass          $arg_nocache;
         proxy_cache_valid           200 302  7d;
@@ -72,7 +72,7 @@ server {
         proxy_http_version          1.1;
         proxy_read_timeout          1m;
         proxy_connect_timeout       1m;
-        proxy_pass                  http://website-server:80;
+        proxy_pass                  http://localhost:8080;
         proxy_cache                 nuxt-cache;
         proxy_cache_bypass          $arg_nocache;
         proxy_cache_valid           200 302  60m;
