--- a/data/nginx/development.conf
+++ b/data/nginx/development.conf
@@ -27,7 +27,7 @@ server {
         proxy_read_timeout          1m;
         proxy_connect_timeout       1m;
         rewrite /api/(.*) /$1  break;
-        proxy_pass                  http://website-api:80;
+        proxy_pass                  http://localhost:8888;
         proxy_cache                 api-cache;
         proxy_cache_bypass          $arg_nocache;
         proxy_cache_valid           200 302  1h;
@@ -53,7 +53,7 @@ server {
         proxy_http_version          1.1;
         proxy_read_timeout          1m;
         proxy_connect_timeout       1m;
-        proxy_pass                  http://website-server:80;
+        proxy_pass                  http://localhost:8080;
         proxy_cache                 nuxt-cache;
         proxy_cache_bypass          $arg_nocache;
         proxy_cache_valid           200 302  1h;
