--- a/data/pm2-service.yml
+++ b/data/pm2-service.yml
@@ -1,9 +1,17 @@
 apps:
+  - name: queue-board
+    cwd: packages/service
+    script: util/queue-board.js
+
   - name: proxy-server
+    cwd: packages/service
     script: node_modules/.bin/github-proxy-server
-    args: --port 3000 --request-interval 50 --tokens tokens.txt
+    args: --request-interval 100 --tokens ../../data/tokens.txt
+    env:
+      PORT: 3000
 
   - name: scheduler
+    cwd: packages/service
     interpreter_args: -r @gittrends/env-config
     script: scheduler.js
     args: all
@@ -12,9 +20,11 @@ apps:
     autorestart: false
 
   - name: updater
+    cwd: packages/service
     interpreter_args: -r @gittrends/env-config
     script: updater.js
     args: --workers 1
     instances: 1
-    exec_mode: cluster
     instance_var: INSTANCE_ID
+    env:
+      GITTRENDS_PROXY_PORT: 3000
