--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -2,18 +2,9 @@ version: '3.7'
 
 services:
   nginx:
-    command: '/bin/sh -c ''while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g "daemon off;"'''
     ports:
       - 80:80
       - 443:443
     volumes:
-      - ./data/nginx/default.conf:/etc/nginx/conf.d/default.conf
-      - ./data/certbot/conf:/etc/letsencrypt
-      - ./data/certbot/www:/var/www/certbot
-
-  certbot:
-    image: certbot/certbot
-    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
-    volumes:
-      - ./data/certbot/conf:/etc/letsencrypt
-      - ./data/certbot/www:/var/www/certbot
+      - ./data/nginx/default.conf:/app/data/nginx/default.conf:ro
+      - ./data/certbot:/app/data/certbot
