--- a/packages/service/package.json
+++ b/packages/service/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "author": "Hudson Silva Borges <hudsonsilbor@gmail.com>",
   "scripts": {
-    "proxy-server": "github-proxy-server --tokens tokens.txt",
+    "proxy-server": "github-proxy-server --tokens ../../data/tokens.txt",
     "add-repositories": "node -r @gittrends/env-config add-repositories.js",
     "add-repository": "node -r @gittrends/env-config add-repository.js",
     "schedule": "node -r @gittrends/env-config scheduler.js",
@@ -13,12 +13,12 @@
   },
   "dependencies": {
     "@gittrends/database-config": "file:../database-config",
-    "ajv": "^6.12.6",
+    "ajv": "^7.0.1",
     "async": "^3.2.0",
     "axios": "^0.21.0",
     "bluebird": "^3.7.2",
     "bull": "^3.20.0",
-    "bull-board": "^1.1.2",
+    "bull-board": "^1.2.0",
     "chalk": "^4.1.0",
     "collections": "^5.1.12",
     "commander": "^6.2.1",
@@ -36,10 +36,10 @@
   },
   "devDependencies": {
     "@gittrends/env-config": "file:../env-config",
-    "@hsborges/github-proxy-server": "^2.2.1",
+    "@hsborges/github-proxy-server": "^2.4.0",
     "@types/bull": "^3.14.4",
     "core-util-is": "^1.0.2",
-    "pm2": "^4.5.0"
+    "pm2": "^4.5.1"
   },
   "config": {
     "resources": [
