--- a/packages/service/package.json
+++ b/packages/service/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@gittrends/database-config": "file:../database-config",
     "ajv": "^7.0.1",
+    "ajv-formats": "^1.5.1",
     "async": "^3.2.0",
     "axios": "^0.21.0",
     "bluebird": "^3.7.2",
