--- a/packages/service/package.json
+++ b/packages/service/package.json
@@ -25,6 +25,7 @@
     "commander": "^6.2.1",
     "consola": "^2.15.0",
     "dayjs": "^1.9.7",
+    "debug": "^4.3.1",
     "express": "^4.17.1",
     "jest": "^26.6.3",
     "js-yaml": "^3.14.1",
