--- a/package.json
+++ b/package.json
@@ -19,8 +19,21 @@
     "packages/*"
   ],
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "4",
+    "@typescript-eslint/parser": "^4.11.1",
     "commitizen": "^4.2.2",
-    "cz-conventional-changelog": "3.3.0"
+    "cz-conventional-changelog": "3.3.0",
+    "eslint": "7",
+    "eslint-config-prettier": "^7.1.0",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-config-standard-with-typescript": "^19.0.1",
+    "eslint-plugin-import": "2",
+    "eslint-plugin-node": "11",
+    "eslint-plugin-prettier": "^3.3.0",
+    "eslint-plugin-promise": "4",
+    "eslint-plugin-standard": "4",
+    "prettier": "^2.2.1",
+    "typescript": "^4.1.3"
   },
   "config": {
     "commitizen": {
