--- a/packages/env-config/package.json
+++ b/packages/env-config/package.json
@@ -1,8 +1,13 @@
 {
   "name": "@gittrends/env-config",
-  "version": "2.0.0",
-  "main": "index.js",
+  "version": "2.1.0",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "license": "MIT",
+  "scripts": {
+    "build": "yarn clean && yarn tsc",
+    "clean": "rm -rf dist"
+  },
   "dependencies": {
     "dotenv": "^8.2.0",
     "find-up": "^5.0.0"
