--- a/packages/website-api/package.json
+++ b/packages/website-api/package.json
@@ -3,9 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
+  "types": "index.d.ts",
   "scripts": {
     "start": "node -r @gittrends/env-config ./node_modules/.bin/fastify start -l info app.js",
-    "dev": "node -r @gittrends/env-config ./node_modules/.bin/fastify start -w -l info -P app.js"
+    "dev": "ts-node-dev -r tsconfig-paths/register -r @gittrends/env-config --respawn --transpile-only index.ts",
+    "lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix"
   },
   "keywords": [],
   "author": "",
@@ -22,9 +24,14 @@
     "fastify-helmet": "^5.0.0",
     "fastify-plugin": "^3.0.0",
     "lodash": "^4.17.19",
-    "nodemailer": "^6.4.17"
+    "nodemailer": "^6.4.17",
+    "pino-pretty": "^4.3.0"
   },
   "devDependencies": {
-    "@gittrends/env-config": "file:../env-config"
+    "@gittrends/env-config": "file:../env-config",
+    "@types/lodash": "^4.14.166",
+    "@types/node": "^14.14.17",
+    "ts-node-dev": "^1.1.1",
+    "tsconfig-paths": "^3.9.0"
   }
 }
