--- a/packages/database-config/package.json
+++ b/packages/database-config/package.json
@@ -8,15 +8,26 @@
   "scripts": {
     "build": "yarn clean && yarn tsc",
     "clean": "rm -rf dist",
+    "generate": "ts-node schema-generator.ts",
     "run-migrations": "node -r @gittrends/env-config ./node_modules/.bin/knex migrate:latest"
   },
   "dependencies": {
+    "ajv": "6",
+    "ajv-formats": "^1.5.1",
+    "glob": "^7.1.6",
     "knex": "^0.21.15",
     "pg": "^8.5.1",
-    "pg-query-stream": "^4.0.0"
+    "pg-query-stream": "^4.0.0",
+    "typescript-json-schema": "^0.47.0"
   },
   "devDependencies": {
     "@gittrends/env-config": "*",
-    "@types/knex": "^0.16.1"
+    "@types/faker": "^5.1.5",
+    "@types/glob": "^7.1.3",
+    "@types/knex": "^0.16.1",
+    "@types/nodemailer": "^6.4.0",
+    "eslint": "7.17.0",
+    "eslint-plugin-standard": "5.0.0",
+    "ts-node": "^9.1.1"
   }
 }
