--- a/packages/database-config/package.json
+++ b/packages/database-config/package.json
@@ -6,14 +6,15 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "build": "yarn clean && yarn tsc",
+    "build": "yarn clean && yarn generate && yarn tsc",
     "clean": "rm -rf dist",
     "generate": "ts-node schema-generator.ts",
-    "run-migrations": "node -r @gittrends/env-config ./node_modules/.bin/knex migrate:latest"
+    "run-migrations": "node -r @gittrends/env-config ./node_modules/.bin/knex migrate:latest",
+    "test": "jest --no-cache"
   },
   "dependencies": {
-    "ajv": "6",
-    "ajv-formats": "^1.5.1",
+    "ajv": "^7.0.3",
+    "ajv-formats": "1.5.0",
     "glob": "^7.1.6",
     "knex": "^0.21.15",
     "pg": "^8.5.1",
@@ -24,10 +25,13 @@
     "@gittrends/env-config": "*",
     "@types/faker": "^5.1.5",
     "@types/glob": "^7.1.3",
+    "@types/jest": "^26.0.19",
     "@types/knex": "^0.16.1",
     "@types/nodemailer": "^6.4.0",
     "eslint": "7.17.0",
     "eslint-plugin-standard": "5.0.0",
+    "jest": "^26.6.3",
+    "ts-jest": "^26.4.4",
     "ts-node": "^9.1.1"
   }
 }
