--- a/packages/service/package.json
+++ b/packages/service/package.json
@@ -9,7 +9,9 @@
     "add-repositories": "node -r @gittrends/env-config add-repositories.js",
     "add-repository": "node -r @gittrends/env-config add-repository.js",
     "schedule": "node -r @gittrends/env-config scheduler.js",
-    "update": "node -r @gittrends/env-config --expose-gc updater.js"
+    "update": "node -r @gittrends/env-config --expose-gc updater.js",
+    "dev:schedule": "ts-node-dev -r tsconfig-paths/register -r @gittrends/env-config --transpile-only src/scheduler.ts",
+    "dev:add-repositories": "ts-node-dev -r tsconfig-paths/register -r @gittrends/env-config --transpile-only src/add-repositories.ts"
   },
   "dependencies": {
     "@gittrends/database-config": "file:../database-config",
@@ -39,9 +41,14 @@
   "devDependencies": {
     "@gittrends/env-config": "file:../env-config",
     "@hsborges/github-proxy-server": "^3.0.2",
+    "@types/bluebird": "^3.5.33",
     "@types/bull": "^3.14.4",
+    "@types/redis": "^2.8.28",
+    "@types/retry": "^0.12.0",
+    "@types/user-agents": "^1.0.0",
     "core-util-is": "^1.0.2",
-    "pm2": "^4.5.1"
+    "pm2": "^4.5.1",
+    "ts-node-dev": "^1.1.1"
   },
   "config": {
     "resources": [
