--- a/packages/service/package.json
+++ b/packages/service/package.json
@@ -11,7 +11,8 @@
     "schedule": "node -r @gittrends/env-config scheduler.js",
     "update": "node -r @gittrends/env-config --expose-gc updater.js",
     "dev:schedule": "ts-node-dev -r tsconfig-paths/register -r @gittrends/env-config --transpile-only src/scheduler.ts",
-    "dev:add-repositories": "ts-node-dev -r tsconfig-paths/register -r @gittrends/env-config --transpile-only src/add-repositories.ts"
+    "dev:add-repositories": "ts-node-dev -r tsconfig-paths/register -r @gittrends/env-config --transpile-only src/add-repositories.ts",
+    "dev:update": "ts-node-dev -r tsconfig-paths/register -r @gittrends/env-config --transpile-only src/updater.ts"
   },
   "dependencies": {
     "@gittrends/database-config": "file:../database-config",
@@ -41,6 +42,7 @@
   "devDependencies": {
     "@gittrends/env-config": "file:../env-config",
     "@hsborges/github-proxy-server": "^3.0.2",
+    "@types/async": "^3.2.5",
     "@types/bluebird": "^3.5.33",
     "@types/bull": "^3.14.4",
     "@types/redis": "^2.8.28",
