--- a/packages/service/package.json
+++ b/packages/service/package.json
@@ -30,13 +30,17 @@
     "dayjs": "^1.9.8",
     "debug": "^4.3.1",
     "express": "^4.17.1",
+    "guild": "^1.2.2",
     "jest": "^26.6.3",
     "js-yaml": "^3.14.1",
     "lodash": "^4.17.20",
     "numeral": "^2.0.6",
+    "object-hash": "^2.1.1",
     "redis": "^3.0.2",
     "retry": "^0.12.0",
     "table": "^6.0.6",
+    "transitory": "^2.1.1",
+    "typescript-collections": "^1.3.3",
     "user-agents": "^1.0.559"
   },
   "devDependencies": {
@@ -45,6 +49,8 @@
     "@types/async": "^3.2.5",
     "@types/bluebird": "^3.5.33",
     "@types/bull": "^3.14.4",
+    "@types/collections": "^5.1.0",
+    "@types/object-hash": "^1.3.4",
     "@types/redis": "^2.8.28",
     "@types/retry": "^0.12.0",
     "@types/user-agents": "^1.0.0",
