--- a/packages/service/package.json
+++ b/packages/service/package.json
@@ -50,6 +50,7 @@
     "@types/bluebird": "^3.5.33",
     "@types/bull": "^3.14.4",
     "@types/collections": "^5.1.0",
+    "@types/debug": "^4.1.5",
     "@types/object-hash": "^1.3.4",
     "@types/redis": "^2.8.28",
     "@types/retry": "^0.12.0",
