--- a/packages/service/package.json
+++ b/packages/service/package.json
@@ -51,6 +51,7 @@
     "@types/bull": "^3.14.4",
     "@types/collections": "^5.1.0",
     "@types/debug": "^4.1.5",
+    "@types/express": "^4.17.9",
     "@types/object-hash": "^1.3.4",
     "@types/redis": "^2.8.28",
     "@types/retry": "^0.12.0",
