--- a/packages/service/package.json
+++ b/packages/service/package.json
@@ -52,9 +52,11 @@
     "@types/collections": "^5.1.0",
     "@types/debug": "^4.1.5",
     "@types/express": "^4.17.9",
+    "@types/numeral": "^0.0.29",
     "@types/object-hash": "^1.3.4",
     "@types/redis": "^2.8.28",
     "@types/retry": "^0.12.0",
+    "@types/table": "^6.0.0",
     "@types/user-agents": "^1.0.0",
     "core-util-is": "^1.0.2",
     "pm2": "^4.5.1",
