--- a/packages/database-config/package.json
+++ b/packages/database-config/package.json
@@ -15,21 +15,17 @@
   "dependencies": {
     "ajv": "^7.0.3",
     "ajv-formats": "1.5.0",
+    "dayjs": "^1.10.3",
     "glob": "^7.1.6",
     "knex": "^0.21.15",
-    "pg": "^8.5.1",
-    "pg-query-stream": "^4.0.0",
+    "mysql2": "^2.2.5",
     "typescript-json-schema": "^0.47.0"
   },
   "devDependencies": {
     "@gittrends/env-config": "*",
-    "@types/faker": "^5.1.5",
     "@types/glob": "^7.1.3",
     "@types/jest": "^26.0.20",
     "@types/knex": "^0.16.1",
-    "@types/nodemailer": "^6.4.0",
-    "eslint": "7.17.0",
-    "eslint-plugin-standard": "5.0.0",
     "jest": "^26.6.3",
     "ts-jest": "^26.4.4",
     "ts-node": "^9.1.1"
