--- a/packages/service/package.json
+++ b/packages/service/package.json
@@ -23,9 +23,12 @@
     "ajv-formats": "^1.5.1",
     "async": "^3.2.0",
     "axios": "^0.21.1",
+    "bee-queue": "^1.3.1",
     "bluebird": "^3.7.2",
     "bull": "^3.20.0",
+    "bull-arena": "^3.7.0",
     "bull-board": "^1.2.0",
+    "bullmq": "^1.14.0",
     "chalk": "^4.1.0",
     "collections": "^5.1.12",
     "commander": "^6.2.1",
@@ -52,6 +55,7 @@
     "@types/async": "^3.2.5",
     "@types/bluebird": "^3.5.33",
     "@types/bull": "^3.14.4",
+    "@types/bull-arena": "^3.0.2",
     "@types/collections": "^5.1.0",
     "@types/debug": "^4.1.5",
     "@types/express": "^4.17.9",
