--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,32 +1,64 @@
 version: '3.7'
 
 services:
-  mysql:
-    image: mysql:latest
-    container_name: mysql
+  postgres:
+    image: postgres:latest
+    container_name: postgres
     restart: always
-    command: --default-time-zone=+00:00 --max-connections=500 --default-authentication-plugin=mysql_native_password
+    command: postgres -c config_file=/etc/postgresql/postgresql.conf
     ports:
-      - ${GITTRENDS_DATABASE_PORT}:3306
+      - ${GITTRENDS_DATABASE_PORT}:5432
     volumes:
-      - 'db:/var/lib/mysql'
+      - db:/var/lib/postgresql/data
+      - ./data/postgres/postgres.conf:/etc/postgresql/postgresql.conf
     environment:
-      MYSQL_ROOT_PASSWORD: NYI4jsei5N4P
-      MYSQL_USER: ${GITTRENDS_DATABASE_USERNAME}
-      MYSQL_PASSWORD: ${GITTRENDS_DATABASE_PASSWORD}
-      MYSQL_DATABASE: ${GITTRENDS_DATABASE_DB}
+      POSTGRES_USER: ${GITTRENDS_DATABASE_USERNAME}
+      POSTGRES_PASSWORD: ${GITTRENDS_DATABASE_PASSWORD}
+      POSTGRES_DB: ${GITTRENDS_DATABASE_DB}
 
-  phpmyadmin:
-    image: phpmyadmin
-    container_name: phpmyadmin
+  pgadmin:
+    image: dpage/pgadmin4:latest
+    container_name: pgadmin
     restart: always
-    links:
-      - mysql:db
     ports:
       - ${GITTRENDS_PGADMIN_PORT}:80
+    volumes:
+      - pgadmin-db:/var/lib/pgadmin
+    links:
+      - postgres
     environment:
-      PMA_USER: ${GITTRENDS_DATABASE_USERNAME}
-      PMA_PASSWORD: ${GITTRENDS_DATABASE_PASSWORD}
+      PGADMIN_DEFAULT_EMAIL: admin@gittrends.app
+      PGADMIN_DEFAULT_PASSWORD: admin
+
+  pghero:
+    image: ankane/pghero
+    container_name: pghero
+    restart: always
+    ports:
+      - ${GITTRENDS_PGHERO_PORT}:8080
+    links:
+      - postgres
+    environment:
+      DATABASE_URL: postgres://${GITTRENDS_DATABASE_USERNAME}:${GITTRENDS_DATABASE_PASSWORD}@postgres:5432/${GITTRENDS_DATABASE_DB}
+
+  pgbackups:
+    image: prodrigestivill/postgres-backup-local
+    container_name: pgbackups
+    restart: always
+    volumes:
+      - /backups:/backups
+    environment:
+      - POSTGRES_HOST=${GITTRENDS_DATABASE_HOST}
+      - POSTGRES_PORT=${GITTRENDS_DATABASE_PORT}
+      - POSTGRES_DB=${GITTRENDS_DATABASE_DB}
+      - POSTGRES_USER=${GITTRENDS_DATABASE_USERNAME}
+      - POSTGRES_PASSWORD=${GITTRENDS_DATABASE_PASSWORD}
+      - POSTGRES_EXTRA_OPTS=-Z9 --schema=public --blobs
+      - SCHEDULE=@weekly
+      - BACKUP_KEEP_DAYS=7
+      - BACKUP_KEEP_WEEKS=4
+      - BACKUP_KEEP_MONTHS=1
+      - HEALTHCHECK_PORT=9999
 
   redis:
     image: redis:alpine
@@ -49,14 +81,14 @@ services:
     volumes:
       - ./data/nginx/development.conf:/app/data/nginx/default.conf:ro
     environment:
-      GITTRENDS_DATABASE_HOST: mysql
-      GITTRENDS_DATABASE_PORT: 3306
+      GITTRENDS_DATABASE_HOST: postgres
+      GITTRENDS_DATABASE_PORT: 5432
     env_file:
       - .env
     depends_on:
-      - mysql
+      - postgres
     links:
-      - mysql
+      - postgres
 
 volumes:
   db:
