--- a/packages/database-config/package.json
+++ b/packages/database-config/package.json
@@ -9,15 +9,14 @@
     "build": "yarn clean && yarn generate && yarn tsc",
     "clean": "rm -rf dist",
     "generate": "ts-node schema-generator.ts",
-    "run-migrations": "node -r @gittrends/env-config ./node_modules/.bin/knex migrate:latest",
-    "test": "jest --no-cache"
+    "run-migrations": "node -r @gittrends/env-config ./node_modules/.bin/knex migrate:latest"
   },
   "dependencies": {
     "ajv": "^7.0.3",
     "ajv-formats": "1.5.0",
     "glob": "^7.1.6",
     "knex": "^0.21.15",
-    "pg": "^8.5.1",
+    "mysql2": "^2.2.5",
     "typescript-json-schema": "^0.47.0"
   },
   "devDependencies": {
@@ -25,8 +24,6 @@
     "@types/glob": "^7.1.3",
     "@types/jest": "^26.0.20",
     "@types/knex": "^0.16.1",
-    "jest": "^26.6.3",
-    "ts-jest": "^26.4.4",
     "ts-node": "^9.1.1"
   }
 }
