--- a/packages/service/package.json
+++ b/packages/service/package.json
@@ -11,38 +11,28 @@
     "add-repositories": "node -r @gittrends/env-config dist/add-repositories.js",
     "schedule": "node -r @gittrends/env-config dist/scheduler.js",
     "update": "node -r @gittrends/env-config --expose-gc dist/updater.js",
-    "dev:schedule": "ts-node-dev -r tsconfig-paths/register -r @gittrends/env-config --transpile-only scheduler.ts",
-    "dev:add-repositories": "ts-node-dev -r tsconfig-paths/register -r @gittrends/env-config --transpile-only add-repositories.ts",
-    "dev:update": "ts-node-dev -r tsconfig-paths/register -r @gittrends/env-config --transpile-only updater.ts",
-    "dev:queue-board": "ts-node-dev -r tsconfig-paths/register -r @gittrends/env-config --transpile-only extra/queue-board.ts",
-    "dev:repos-stats": "ts-node-dev -r tsconfig-paths/register -r @gittrends/env-config --transpile-only extra/repos-stats.ts"
+    "dev:schedule": "ts-node -r tsconfig-paths/register -r @gittrends/env-config -T scheduler.ts",
+    "dev:add-repositories": "ts-node -r tsconfig-paths/register -r @gittrends/env-config -T add-repositories.ts",
+    "dev:update": "ts-node -r tsconfig-paths/register -r @gittrends/env-config -T updater.ts",
+    "dev:queue-board": "ts-node -r tsconfig-paths/register -r @gittrends/env-config -T extra/queue-board.ts",
+    "dev:repos-stats": "ts-node -r tsconfig-paths/register -r @gittrends/env-config -T extra/repos-stats.ts"
   },
   "dependencies": {
     "@gittrends/database-config": "file:../database-config",
-    "ajv": "^7.0.3",
-    "ajv-formats": "^1.5.1",
-    "async": "^3.2.0",
     "axios": "^0.21.1",
-    "bee-queue": "^1.3.1",
     "bluebird": "^3.7.2",
-    "bull": "^3.20.0",
-    "bull-arena": "^3.7.0",
     "bull-board": "^1.2.0",
     "bullmq": "^1.14.0",
     "chalk": "^4.1.0",
-    "collections": "^5.1.12",
     "commander": "^6.2.1",
     "consola": "^2.15.0",
     "dayjs": "^1.10.3",
-    "debug": "^4.3.1",
     "express": "^4.17.1",
-    "guild": "^1.2.2",
-    "jest": "^26.6.3",
+    "ioredis": "^4.19.4",
     "js-yaml": "^4.0.0",
     "lodash": "^4.17.20",
     "numeral": "^2.0.6",
     "object-hash": "^2.1.1",
-    "redis": "^3.0.2",
     "retry": "^0.12.0",
     "table": "^6.0.7",
     "transitory": "^2.1.1",
@@ -52,22 +42,18 @@
   "devDependencies": {
     "@gittrends/env-config": "file:../env-config",
     "@hsborges/github-proxy-server": "^3.0.10",
-    "@types/async": "^3.2.5",
     "@types/bluebird": "^3.5.33",
-    "@types/bull": "^3.14.4",
-    "@types/bull-arena": "^3.0.2",
-    "@types/collections": "^5.1.0",
     "@types/debug": "^4.1.5",
     "@types/express": "^4.17.9",
+    "@types/ioredis": "^4.17.11",
     "@types/numeral": "^0.0.29",
     "@types/object-hash": "^1.3.4",
-    "@types/redis": "^2.8.28",
     "@types/retry": "^0.12.0",
     "@types/table": "^6.0.0",
     "@types/user-agents": "^1.0.0",
     "core-util-is": "^1.0.2",
     "pm2": "^4.5.1",
-    "ts-node-dev": "^1.1.1"
+    "ts-node": "^9.1.1"
   },
   "config": {
     "resources": [
