--- a/packages/website-api/package.json
+++ b/packages/website-api/package.json
@@ -6,7 +6,7 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "start": "yarn build && node -r @gittrends/env-config dist/index.js",
-    "dev": "ts-node-dev -r tsconfig-paths/register -r @gittrends/env-config --respawn --transpile-only index.ts",
+    "dev": "ts-node-dev -r tsconfig-paths/register -r @gittrends/env-config --respawn -T index.ts",
     "build": "rm -rf dist && tsc",
     "lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix"
   },
@@ -29,8 +29,11 @@
   },
   "devDependencies": {
     "@gittrends/env-config": "file:../env-config",
+    "@types/faker": "^5.1.5",
     "@types/lodash": "^4.14.167",
     "@types/node": "^14.14.20",
+    "@types/nodemailer": "^6.4.0",
+    "ts-node": "^9.1.1",
     "ts-node-dev": "^1.1.1",
     "tsconfig-paths": "^3.9.0"
   }
