--- a/packages/database-config/package.json
+++ b/packages/database-config/package.json
@@ -16,6 +16,7 @@
     "ajv-formats": "1.5.0",
     "glob": "^7.1.6",
     "knex": "^0.21.15",
+    "lodash": "^4.17.20",
     "mysql2": "^2.2.5",
     "typescript-json-schema": "^0.47.0"
   },
@@ -24,6 +25,7 @@
     "@types/glob": "^7.1.3",
     "@types/jest": "^26.0.20",
     "@types/knex": "^0.16.1",
+    "@types/lodash": "^4.14.167",
     "ts-node": "^9.1.1"
   }
 }
