--- a/packages/service/package.json
+++ b/packages/service/package.json
@@ -11,6 +11,7 @@
     "add-repositories": "node -r @gittrends/env-config dist/add-repositories.js",
     "schedule": "node -r @gittrends/env-config dist/scheduler.js",
     "update": "node -r @gittrends/env-config --expose-gc dist/updater.js",
+    "repos-stats": "node -r @gittrends/env-config dist/extra/repos-stats.js",
     "dev:schedule": "ts-node -r tsconfig-paths/register -r @gittrends/env-config -T scheduler.ts",
     "dev:add-repositories": "ts-node -r tsconfig-paths/register -r @gittrends/env-config -T add-repositories.ts",
     "dev:update": "ts-node -r tsconfig-paths/register -r @gittrends/env-config -T updater.ts",
@@ -41,10 +42,10 @@
   },
   "devDependencies": {
     "@gittrends/env-config": "file:../env-config",
-    "@hsborges/github-proxy-server": "^3.0.10",
+    "@hsborges/github-proxy-server": "^3.0.11",
     "@types/bluebird": "^3.5.33",
     "@types/debug": "^4.1.5",
-    "@types/express": "^4.17.9",
+    "@types/express": "^4.17.11",
     "@types/ioredis": "^4.17.11",
     "@types/numeral": "^0.0.29",
     "@types/object-hash": "^1.3.4",
