--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "node -r tsconfig-paths/register ./node_modules/.bin/next dev",
-    "build": "next build",
-    "start": "next start"
+    "build": "node -r tsconfig-paths/register ./node_modules/.bin/next build",
+    "start": "node -r tsconfig-paths/register ./node_modules/.bin/next start"
   },
   "dependencies": {
     "@ant-design/icons": "^4.3.0",
@@ -16,12 +16,15 @@
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@zeit/next-less": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
+    "@zeit/next-typescript": "^1.1.1",
     "add": "^2.0.6",
     "antd": "^4.10.2",
     "axios": "^0.21.1",
     "babel-plugin-import": "^1.13.3",
+    "fork-ts-checker-webpack-plugin": "^6.1.0",
     "less": "^4.1.0",
     "less-vars-to-js": "^1.3.0",
+    "lodash": "^4.17.20",
     "next": "10.0.5",
     "null-loader": "^4.0.1",
     "react": "17.0.1",
