--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.2",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "@zeit/next-css": "^1.0.1",
     "@zeit/next-less": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
     "@zeit/next-typescript": "^1.1.1",
@@ -26,6 +27,7 @@
     "less-vars-to-js": "^1.3.0",
     "lodash": "^4.17.20",
     "next": "10.0.5",
+    "next-compose-plugins": "^2.2.1",
     "null-loader": "^4.0.1",
     "react": "17.0.1",
     "react-cookie": "^4.0.3",
