--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "node -r tsconfig-paths/register ./node_modules/.bin/next dev",
-    "build": "node -r tsconfig-paths/register ./node_modules/.bin/next build",
-    "start": "node -r tsconfig-paths/register ./node_modules/.bin/next start"
+    "dev": "node -r tsconfig-paths/register -r @gittrends/env-config ./node_modules/.bin/next dev",
+    "build": "node -r tsconfig-paths/register -r @gittrends/env-config ./node_modules/.bin/next build",
+    "start": "node -r tsconfig-paths/register -r @gittrends/env-config ./node_modules/.bin/next start"
   },
   "dependencies": {
     "@ant-design/icons": "^4.3.0",
