--- a/packages/service/Dockerfile
+++ b/packages/service/Dockerfile
@@ -1,5 +1,7 @@
 FROM node:alpine
 
+RUN apk add --update python2
+
 WORKDIR /app
 COPY . .
 RUN rm -rf packages/website packages/website-api packages/docker-autossh-tunnel
@@ -17,4 +19,4 @@ RUN yarn install --force && yarn build
 EXPOSE 3000
 EXPOSE 8000-8010
 
-CMD [ "pm2-runtime", "pm2-ecosystem.yml" ]
+CMD [ "./node_modules/.bin/pm2-runtime", "pm2-ecosystem.yml" ]
