--- a/.env.example
+++ b/.env.example
@@ -41,6 +41,7 @@ GITHUB_SECRET_ID=
 GITTRENDS_BATCH_SIZE=1000
 GITTRENDS_CACHE_SIZE=50000
 GITTRENDS_WRITE_BATCH_SIZE=500
+GITTRENDS_WRITER_QUEUE_CONCURRENCY=1
 GITTRENDS_DAO_CHUNK_SIZE=1000
 GITTRENDS_QUEUE_ATTEMPS=1
 GITTRENDS_PHPMYADMIN_PORT=8081
