--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,32 +1,47 @@
 version: '3.7'
 
 services:
-  mysql:
-    image: mysql:latest
-    container_name: mysql
+  postgres:
+    image: postgres:latest
+    container_name: postgres
     restart: always
-    command: --default-time-zone=+00:00 --max-connections=250 --default-authentication-plugin=mysql_native_password
+    command: postgres -c config_file=/etc/postgresql.conf
     ports:
-      - ${GITTRENDS_DATABASE_PORT}:3306
+      - ${GITTRENDS_DATABASE_PORT}:5432
     volumes:
-      - db:/var/lib/mysql
-      - ./data/mysql:/etc/mysql/conf.d
+      - db:/var/lib/postgresql/data
+      - ./data/postgres.conf:/etc/postgresql.conf
     environment:
-      MYSQL_ROOT_PASSWORD: NYI4jsei5N4P
-      MYSQL_USER: ${GITTRENDS_DATABASE_USERNAME}
-      MYSQL_PASSWORD: ${GITTRENDS_DATABASE_PASSWORD}
-      MYSQL_DATABASE: ${GITTRENDS_DATABASE_DB}
+      POSTGRES_USER: ${GITTRENDS_DATABASE_USERNAME}
+      POSTGRES_PASSWORD: ${GITTRENDS_DATABASE_PASSWORD}
+      POSTGRES_DB: ${GITTRENDS_DATABASE_DB}
 
-  phpmyadmin:
-    image: phpmyadmin
+  pgadmin:
+    image: dpage/pgadmin4
+    container_name: pgadmin
     restart: always
     ports:
-      - ${GITTRENDS_PHPMYADMIN_PORT}:80
+      - ${GITTRENDS_PGADMIN_PORT}:80
+    volumes:
+      - pgadmin:/var/lib/pgadmin
     environment:
-      PMA_USER: ${GITTRENDS_DATABASE_USERNAME}
-      PMA_PASSWORD: ${GITTRENDS_DATABASE_PASSWORD}
-    links:
-      - mysql:db
+      PGADMIN_DEFAULT_EMAIL: admin@gittrends.app
+      PGADMIN_DEFAULT_PASSWORD: tzWyJgR7VyAV
+      PGADMIN_LISTEN_ADDRESS: 0.0.0.0
+      PGADMIN_LISTEN_PORT: 80
+    depends_on:
+      - postgres
+
+  pghero:
+    image: ankane/pghero
+    container_name: pghero
+    restart: always
+    ports:
+      - ${GITTRENDS_PGHERO_PORT}:8080
+    environment:
+      DATABASE_URL: postgres://${GITTRENDS_DATABASE_USERNAME}:${GITTRENDS_DATABASE_PASSWORD}@postgres:5432/${GITTRENDS_DATABASE_DB}
+    depends_on:
+      - postgres
 
   redis:
     image: redis:alpine
@@ -54,11 +69,10 @@ services:
     env_file:
       - .env
     depends_on:
-      - mysql
-    links:
-      - mysql
+      - postgres
 
 volumes:
   db:
-    external: true
     name: gittrends.app
+  pgadmin:
+    name: pgadmin.gittrends.app
