--- a/data/nginx/default.conf
+++ b/data/nginx/default.conf
@@ -1,8 +1,8 @@
 include /app/data/certbot/conf/options-ssl-nginx.conf;
 ssl_dhparam /app/data/certbot/conf/ssl-dhparams.pem;
 
-proxy_cache_path  /nuxt-cache levels=1:2 keys_zone=nuxt-cache:25m max_size=250m inactive=60m use_temp_path=off;
-proxy_cache_path  /api-cache levels=1:2 keys_zone=api-cache:25m max_size=5g inactive=30d use_temp_path=off;
+proxy_cache_path  /var/cache/nuxt-cache levels=1:2 keys_zone=nuxt-cache:25m max_size=250m inactive=60m use_temp_path=off;
+proxy_cache_path  /var/cache/api-cache levels=1:2 keys_zone=api-cache:25m max_size=5g inactive=30d use_temp_path=off;
 
 
 server {
