--- a/data/nginx/development.conf
+++ b/data/nginx/development.conf
@@ -1,5 +1,5 @@
-proxy_cache_path  /nuxt-cache levels=1:2 keys_zone=nuxt-cache:25m max_size=500m inactive=1h use_temp_path=off;
-proxy_cache_path  /api-cache levels=1:2 keys_zone=api-cache:25m max_size=1g inactive=1h use_temp_path=off;
+proxy_cache_path  /var/cache/nuxt-cache levels=1:2 keys_zone=nuxt-cache:25m max_size=500m inactive=1h use_temp_path=off;
+proxy_cache_path  /var/cache/api-cache levels=1:2 keys_zone=api-cache:25m max_size=1g inactive=1h use_temp_path=off;
 
 server {
     listen 80;
