--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "type": "git",
     "url": "https://github.com/hsborges/gittrends-repository.git"
   },
+  "scripts": {
+    "build": "yarn workspaces run build && yarn install --force"
+  },
   "type": "commonjs",
   "engines": {
     "node": ">=12.0.0"
