--- a/packages/service/package.json
+++ b/packages/service/package.json
@@ -33,6 +33,7 @@
     "ioredis": "^4.19.4",
     "js-yaml": "^4.0.0",
     "lodash": "^4.17.20",
+    "lru-cache": "^6.0.0",
     "numeral": "^2.0.6",
     "object-hash": "^2.1.1",
     "retry": "^0.12.0",
@@ -48,6 +49,7 @@
     "@types/debug": "^4.1.5",
     "@types/express": "^4.17.11",
     "@types/ioredis": "^4.19.3",
+    "@types/lru-cache": "^5.1.0",
     "@types/numeral": "^2.0.0",
     "@types/object-hash": "^1.3.4",
     "@types/retry": "^0.12.0",
