--- a/packages/service/package.json
+++ b/packages/service/package.json
@@ -36,9 +36,8 @@
     "lru-cache": "^6.0.0",
     "numeral": "^2.0.6",
     "object-hash": "^2.1.1",
-    "retry": "^0.12.0",
+    "promise-retry": "^2.0.1",
     "table": "^6.0.7",
-    "transitory": "^2.1.1",
     "user-agents": "^1.0.559"
   },
   "devDependencies": {
@@ -52,7 +51,7 @@
     "@types/lru-cache": "^5.1.0",
     "@types/numeral": "^2.0.0",
     "@types/object-hash": "^1.3.4",
-    "@types/retry": "^0.12.0",
+    "@types/promise-retry": "^1.1.3",
     "@types/table": "^6.0.0",
     "@types/user-agents": "^1.0.0",
     "core-util-is": "^1.0.2",
