--- a/packages/service/package.json
+++ b/packages/service/package.json
@@ -5,13 +5,13 @@
   "license": "MIT",
   "author": "Hudson Silva Borges <hudsonsilbor@gmail.com>",
   "scripts": {
-    "build": "yarn clean && yarn tsc",
-    "clean": "rm -rf dist",
+    "build": "rm -rf dist && yarn tsc",
     "proxy-server": "github-proxy-server --api graphql --tokens ../../data/tokens.txt",
     "add-repositories": "node -r @gittrends/env-config dist/add-repositories.js",
     "schedule": "node -r @gittrends/env-config dist/scheduler.js",
     "update": "node -r @gittrends/env-config --expose-gc dist/updater.js",
     "repos-stats": "node -r @gittrends/env-config dist/extra/repos-stats.js",
+    "queue-board": "node -r @gittrends/env-config dist/extra/queue-board.js",
     "dev:schedule": "ts-node -r tsconfig-paths/register -r @gittrends/env-config -T scheduler.ts",
     "dev:add-repositories": "ts-node -r tsconfig-paths/register -r @gittrends/env-config -T add-repositories.ts",
     "dev:update": "ts-node -r tsconfig-paths/register -r @gittrends/env-config -T updater.ts",
@@ -20,7 +20,6 @@
   },
   "dependencies": {
     "@gittrends/database-config": "file:../database-config",
-    "async": "^3.2.0",
     "axios": "^0.21.1",
     "bluebird": "^3.7.2",
     "bull-board": "^1.2.0",
@@ -34,6 +33,7 @@
     "js-yaml": "^4.0.0",
     "lodash": "^4.17.20",
     "lru-cache": "^6.0.0",
+    "mongodb": "^3.6.4",
     "numeral": "^2.0.6",
     "object-hash": "^2.1.1",
     "promise-retry": "^2.0.1",
@@ -43,12 +43,11 @@
   "devDependencies": {
     "@gittrends/env-config": "file:../env-config",
     "@hsborges/github-proxy-server": "^3.2.3",
-    "@types/async": "^3.2.5",
     "@types/bluebird": "^3.5.33",
-    "@types/debug": "^4.1.5",
     "@types/express": "^4.17.11",
     "@types/ioredis": "^4.19.3",
     "@types/lru-cache": "^5.1.0",
+    "@types/mongodb": "^3.6.6",
     "@types/numeral": "^2.0.0",
     "@types/object-hash": "^1.3.4",
     "@types/promise-retry": "^1.1.3",
