--- a/packages/database-config/package.json
+++ b/packages/database-config/package.json
@@ -19,7 +19,7 @@
     "glob": "^7.1.6",
     "lodash": "^4.17.20",
     "migrate-mongo": "^8.1.4",
-    "mongodb": "^3.6.4",
+    "mongodb": "3.6.3",
     "object-hash": "^2.1.1",
     "typescript-json-schema": "^0.48.0"
   },
