--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,22 @@
 # gittrends database
 GITTRENDS_DATABASE_HOST=localhost
-GITTRENDS_DATABASE_PORT=3306
+GITTRENDS_DATABASE_PORT=27017
 GITTRENDS_DATABASE_DB=gittrends_app-development
-GITTRENDS_DATABASE_USERNAME=mysql
-GITTRENDS_DATABASE_PASSWORD=mysql
+GITTRENDS_DATABASE_USERNAME=root
+GITTRENDS_DATABASE_PASSWORD=root
 GITTRENDS_DATABASE_POOL_MIN=2
 GITTRENDS_DATABASE_POOL_MAX=10
 # gittrends database over ssh tunel
-GITTRENDS_DATABASE_TUNEL_HOST=
+GITTRENDS_TUNEL_HOST=
+GITTRENDS_TUNEL_PORT=22
+GITTRENDS_TUNEL_USERNAME=
+GITTRENDS_TUNEL_PASSWORD=
+GITTRENDS_TUNEL_PRIVATE_KEY=
+GITTRENDS_TUNEL_PASSPHRASE=
+GITTRENDS_TUNEL_DST_HOST=
+GITTRENDS_TUNEL_DST_PORT=
+GITTRENDS_TUNEL_LOCAL_HOST=
+GITTRENDS_TUNEL_LOCAL_PORT=
 
 # redis - caching and messaging queue
 GITTRENDS_REDIS_HOST=localhost
@@ -41,6 +50,5 @@ GITHUB_SECRET_ID=
 GITTRENDS_CACHE_SIZE=50000
 GITTRENDS_WRITE_BATCH_SIZE=100
 GITTRENDS_QUEUE_ATTEMPS=1
-GITTRENDS_PGADMIN_PORT=8081
-GITTRENDS_PGHERO_PORT=8082
+GITTRENDS_ADMIN_MONGO_PORT=8081
 GITTRENDS_QUEUE_BOARD_PORT=8083
