--- a/packages/database-config/package.json
+++ b/packages/database-config/package.json
@@ -17,10 +17,13 @@
     "ajv": "^7.1.0",
     "ajv-formats": "1.5.1",
     "glob": "^7.1.6",
+    "inject-tunnel-ssh": "^0.0.5",
     "lodash": "^4.17.20",
     "migrate-mongo": "^8.1.4",
     "mongodb": "3.6.3",
     "object-hash": "^2.1.1",
+    "ssh2": "^0.8.9",
+    "tunnel-ssh": "^4.1.4",
     "typescript-json-schema": "^0.49.0"
   },
   "devDependencies": {
@@ -29,6 +32,8 @@
     "@types/jest": "^26.0.20",
     "@types/lodash": "^4.14.168",
     "@types/mongodb": "^3.6.7",
+    "@types/ssh2": "^0.5.46",
+    "@types/tunnel-ssh": "^4.1.0",
     "ts-node": "^9.1.1"
   }
 }
