--- a/.env.example
+++ b/.env.example
@@ -17,6 +17,7 @@ GITTRENDS_TUNEL_DST_HOST=
 GITTRENDS_TUNEL_DST_PORT=
 GITTRENDS_TUNEL_LOCAL_HOST=
 GITTRENDS_TUNEL_LOCAL_PORT=
+GITTRENDS_TUNEL_READY_TIMEOUT=60000
 
 # redis - caching and messaging queue
 GITTRENDS_REDIS_HOST=localhost
