--- a/packages/website-api/package.json
+++ b/packages/website-api/package.json
@@ -14,8 +14,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@gittrends/database-config": "file:../database-config",
+    "@gittrends/database-config": "*",
+    "aws-lambda": "^1.0.6",
+    "aws-serverless-express": "^3.4.0",
     "axios": "^0.21.1",
+    "claudia": "^5.13.0",
     "dayjs": "^1.10.4",
     "faker": "^5.4.0",
     "fastify": "^3.12.0",
@@ -28,7 +31,8 @@
     "nodemailer": "^6.4.18"
   },
   "devDependencies": {
-    "@gittrends/env-config": "file:../env-config",
+    "@gittrends/env-config": "*",
+    "@types/aws-serverless-express": "^3.3.3",
     "@types/faker": "^5.1.6",
     "@types/lodash": "^4.14.168",
     "@types/node": "^14.14.27",
